--- a/kitty.conf
+++ b/kitty.conf
@@ -2344,12 +2344,12 @@ map f11 toggle_fullscreen
 
 #THEMES
 #Automanage by my script!
-include catppuccin_mocha.conf
+include macchiato.conf
 background_opacity 1
 
 
 
 # BEGIN_KITTY_THEME
 # Gruvbox Dark
-include catppuccin_mocha.conf
+# include catppuccin_mocha.conf
 # END_KITTY_THEME
