--- a/kitty.conf
+++ b/kitty.conf
@@ -24,7 +24,7 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -351,7 +351,7 @@
 
 #: Mouse {{{
 
-# mouse_hide_wait 3.0
+# mouse_hide_waita 3.0
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
@@ -366,7 +366,7 @@
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, straight, double, curly, dotted, dashed.
 
-# open_url_with default
+open_url_with default
 
 #: The program to open clicked URLs. The special value default with
 #: first look for any URL handlers defined via the open_actions
@@ -1059,7 +1059,7 @@
 
 #: }}}
 
-#: Color scheme {{{
+#: Color scheme {{{{{{
 
 # foreground #dddddd
 # background #000000
@@ -1211,7 +1211,7 @@
 
 #: }}}
 
-#: }}}
+#: }}}}}}
 
 #: Advanced {{{
 
@@ -2344,11 +2344,13 @@ map f11 toggle_fullscreen
 
 #THEMES
 #Automanage by my script!
-include macchiato.conf
+# include macchiato.conf
+include catppuccin_mocha.conf
 background_opacity 1
 
-
-
+cursor_trail 1
+# cursor_trail_decay 0.05 0.1
+ 
 # BEGIN_KITTY_THEME
 # Gruvbox Dark
 # include catppuccin_mocha.conf
